fix:蛇身移动；增加碰撞体

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -5,5 +5,27 @@
       "width": 1920,
       "height": 1080
     }
+  },
+  "physics": {
+    "collisionGroups": [
+      {
+        "index": 1,
+        "name": "Food"
+      },
+      {
+        "index": 2,
+        "name": "Wall"
+      },
+      {
+        "index": 3,
+        "name": "Head"
+      }
+    ],
+    "collisionMatrix": {
+      "0": 1,
+      "1": 8,
+      "2": 8,
+      "3": 6
+    }
   }
 }
