--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -19,13 +19,18 @@
       {
         "index": 3,
         "name": "Head"
+      },
+      {
+        "index": 4,
+        "name": "Body"
       }
     ],
     "collisionMatrix": {
       "0": 1,
       "1": 8,
       "2": 8,
-      "3": 6
+      "3": 22,
+      "4": 8
     }
   },
   "custom_joint_texture_layouts": []
